--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
 		<ul id="commits"></ul>
 		
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+		<script src="js/lib/jquery.1.9.1.min.js"></script>
 		
-		<script src="/src/commitment.js"></script>
+		<script src="js/commitment.min.js"></script>
 		
 		<script>
 		
