--- a/index.html
+++ b/index.html
@@ -69,11 +69,6 @@
 		float: left;
 	}
 	
-	.comments {
-		margin: 20px 0 0 0;
-		float: right;
-	}
-	
 	a {
 		color: dodgerblue;
 		text-decoration: none;
@@ -95,8 +90,7 @@
 		
 			$('#commits').commitment({
 				user: 'michael-lynch',
-				repo: 'reading-time',
-				showCommentsLink: true
+				repo: 'reading-time'
 			});
 		
 		</script>
