--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
 		margin: 0;
 	}
 	
-	ul {
+	.wrapper {
 		margin: 40px 0 40px 5%;
+	}
+	
+	h1 {
+		font-size: 20px;
+		line-height: 30px;
+	}
+	
+	ul {
+		margin: 20px 0 0 0;
 		padding: 0;
 		float: left;
 		width: 90%;
@@ -80,7 +89,15 @@
 
 	<body lang="en">
 
-		<ul id="commits"></ul>
+		<div class="wrapper">
+	
+			<h1>Commit Messages for "Reading Time"</h1>
+			
+			<p><a href="https://github.com/michael-lynch/reading-time/commits/" target="_blank">https://github.com/michael-lynch/reading-time/commits/</a></p>
+	
+			<ul id="commits"></ul>
+		
+		</div>
 		
 		<script src="js/lib/jquery.1.9.1.min.js"></script>
 		
