--- a/demo/index.html
+++ b/demo/index.html
@@ -93,11 +93,11 @@
 	
 			<h1>Commit Messages for "Reading Time"</h1>
 			
-			<p><a href="https://github.com/michael-lynch/reading-time/commits/" target="_blank">https://github.com/michael-lynch/reading-time/commits/</a>
+			<p><a href="https://github.com/michael-lynch/reading-time/commits/" target="_blank">https://github.com/michael-lynch/reading-time/commits/</a></p>
 	
 			<ul id="commits"></ul>
 		
-		</p>
+		</div>
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 		
